15--k8s-foo-&-bar-servers/foo-bar--namespace.yaml
# -------------------
# yaml configuration to define a namespace
# -------------------

apiVersion: v1
kind: Namespace
metadata:
  name:  foo-bar-nspace
