15--k8s-foo-&-bar-servers/bar-server--deployment.yaml
# -------------------
# yaml configuration to create a deployment for the Bar server
# -------------------

apiVersion: apps/v1
# Deployment configuration
kind: Deployment

metadata:
  # the namespace is referred
  namespace: foo-bar-nspace
  name: bar-service-deployment
  labels:
    name:  bar-service-deployment

spec:
  selector:
    matchLabels:
      name:  bar-service

  # the template follows the same structure as the Pod configurations
  template:
    metadata:
      labels:
        name:  bar-service
    
    spec:
      # container configurations. the image is pulled from the DockerHub
      containers:
      - name: bar-service
        image: athiththan11/bar-server:1.0.0
        
        # resource configurations for containers
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        
        # port configurations
        ports:
          - containerPort: 4000
        
        # environmen var configurations
